# dwc-bias-analysis

./: LICENSE  README.md  changelog.md  sampling-temperature-bias-ipynb.ipynb  setup.cfg  setup.py
.binder/: environment.yml
dwc-bias-analysis/: __init__.py
notebooks/: README.md  example.ipynb  sampling-temperature-bias.ipynb  sampling-type-bias.ipynb  sampling_type_bias.ipynb
projname/: __init__.py
