# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = dwc-bias-analysis
description = An analysis of sampling spatial, tempora, and taxonomic biases for Darwin-Core (Dwc) data.
# author =
# author_email =
url = https://github.com/marinebon/dwc-bias-analysis
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license-file = LICENSE
project_urls =
#     Documentation = https://marinebon.github.io/py-dwc-viz
    Bug Tracker = https://github.com/marinebon/dwc-bias-analysis
    Source Code = https://github.com/marinebon/dwc-bias-analysis
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
install_requires =
     pyobis>=1.2
     pydwcviz @ https://github.com/marinebon/py-dwc-viz/archive/0.0.1.zip
     python_requires = >=3.7
packages = find:
